--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -145,7 +145,8 @@
 
 % ========================================
 \title{ \snana\ User's Manual: \\ 
-         Simulation, Lightcurve Fitters \& Cosmology Fitters}
+         Simulation, Lightcurve Fits, BBC, 
+         Create-Covariance, Batch Utilities}
 
 \author{Richard Kessler \\ University of Chicago \\ 
     Kavli Institute for Cosmological Physics \\
@@ -11716,51 +11717,65 @@ If the {BBC\_VERSION} key is not included, set {\tt BBC\_VERSION=1}.
 
 % ##########################################
    \clearpage
-   \section{Cosmology Fitters}
+   \section{Cosmology Fitting}
    \label{sec:wfit}
 % ###########################################
 
-There are currently two cosmology fitters available.
-First is {\tt wfit.exe}, which fits for $w$ and $\OM$
-assuming a flat universe. Typing the {\tt wfit.exe} 
-command with no arguments lists the options. 
-The BAO and CMB priors are currently hard-wired, 
-but a more flexible method to specify priors may be added later.
-An example command is as follows,
-\begin{verbatim}
-  wfit.exe <fitresFile> -zmin .02 -zerr .001 -snrms .15 -bao -cmb 
-\end{verbatim}
-%
-where the fitres-file is output from the {\tt SALT2mu.exe} program.
-The arguments specify 
-using SNe with $z>0.02$, 
-adding a peculiar-velocity uncertainty of 300~km/s 
-   (i.e, the ``{\tt zerr}'' arg is $v_{\rm pec}/c$),
-adding an anomalous distance-uncertainty of 0.15 mag (``{\tt snrms}'' arg),
-and using the BAO \& CMB priors. 
-Peculiar-velocity covariances can also be used as explained below in 
-\S\ref{subsec:mucovar}.
+\newcommand{\wfit}{{\tt wfit.exe}}
+\newcommand{\de}{{$w_0w_a$CDM}}
 
-The second program, {\tt sncosmo\_mcmc.exe},
-is a more general cosmology fitter based on Monte Carlo
-Markov chains. This fitter handles more diverse cosmologies
-such as time-dependent $w$ and non-zero curvature.
-Sample inputs files are in 
+State-of-the-art cosmology fitting tools include CosmoMC and CosmoSIS
+that are not included in \snana. 
+Within \snana, \wfit\ is a fast cosmology fitting program that
+is not nearly as sohopisticated as CosmoSIS, but is useful for 
+systematics tests and forecasts. 
+\wfit\ models $w$CDM ($w$, $\OM$) and CPL $w_0w_a$CDM model,
+both assuming a flat universe. 
+The CMB prior is based the $R$ parametrization using simulated cosmology parameters
+and $\sigma_R=0.007$ to reproduce the DES3YR uncertainties. 
+The BAO prior is based on Alam 2020.
+Table \ref{tab:wfit} compares \wfit\ results to published DES3YR and Pantheon values using
 %
 \begin{verbatim}
-  $SNDATA_ROOT/sample_input_files/sncosmo_mcmc/
+   wfit.exe  [HubbleDiagram] -cmb_sim -sigma_Rcmb 0.007   -wsteps 101 -omsteps 101 \
+             -mucov_file [mucov_file]  \
+             -bao_sim               # only for DES w0waCDM only
 \end{verbatim}
-%
-Both of these cosmology fitters read self-documented ``fitres'' files
-(\S\ref{sss:combine_fitres}) that contain
-a redshift, distance modulus and survey index
-(other parameters in the fitres file are ignored).
+where {\tt HubbleDiagram} and {\tt mucov\_file} are from public data releases.
 
-Beware that These cosmology fitters are not state-of-the-art, and are thus
-useful for rapid testing or systematics studies.
+\begin{table}[h!]
+\centering
+\begin{tabular}{l|lllllll}
+& $\Omega_m$ & $\sigma (\Omega_m)$ & $w_0$ & $\sigma(w_0)$  & $w_a$ & $\sigma(w_a)$ &FoM \\
+ \hline
+     DES3YR  $w$CDM  SN+CMB &$0.321$&  $\pm0.018$ & $-0.978$ & $\pm0.059$ &  & &  \\
+     \wfit\ &$0.326$& $\pm0.018$ & $-0.964$ & $\pm0.059$ &  & &  \\ \\
+                         
+     Pantheon  $w$CDM  SN+CMB&$0.307$&$\pm0.012$  & $-1.026$ &$\pm0.041$  &  &  & \\
+     \wfit\ &$0.308$&$\pm0.012$  & $-1.029$ &$\pm0.041$  &  &  & \\ \\
+     DES3YR  \de\ SN+CMB+BAO &$0.316$& $\pm0.011$ & $-0.885$ &$\pm0.114$  & $-0.387$ & $\pm0.430$ & $46$ \\
+     \wfit\ &$0.309$&$\pm0.012$  &$-0.965$  & $\pm0.092$ & $-0.354$ & $\pm0.442$ & $64$\\ \\
+                         
+    Pantheon \de\  SN+CMB &$0.308$&$\pm0.018$  &$-1.009$  &$\pm0.159$  & $-0.129$ &$\pm0.755$  & $31$ \\
+    \wfit\ &$0.305$& $\pm0.015$ & $-0.981$ &$\pm0.159$  &$-0.302$  &  $\pm0.725$&$32$ \\ \\
+\end{tabular}
+\caption{Comparison of published cosmology parameters to those obtained with \wfit.
+  DES3YR results are from Table 2 in 
+     \url{https://arxiv.org/pdf/1811.02374.pdf}. 
+  Pantheon results are from Table $12$ and $13$  of 
+     \url{https://arxiv.org/pdf/1710.00845.pdf}. 
+  CMB prior in published results is from Planck 2016, and used in all four cases. 
+  CMB prior in \wfit\ uses $R$-parameter with $\sigma_R=0.007$ tuned to match 
+     DES3YR $w$-uncertainty. 
+  The \wfit \ BAO is based on \url{https://arxiv.org/abs/2007.08991}~.
+  All fits use redshift binned data.
+  }
+\label{tab:wfit}
+\end{table}
+
 
 % -----------------------------------------------
-%   \clearpage
+   \clearpage
    \subsection{Interpreting Redshift Variables in SNANA Tables}
    \label{subsec:zdefine}
 % -----------------------------------------------
