new --faster option

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -10761,7 +10761,7 @@ etc ...
 Users prepare the {\tt SED.INFO} file, along with each
 SED time-series file with format
 \begin{verbatim}
-   epoch(days)   wavelength(A)   flux(erg/cm^2/s/A) .
+   epoch(days)   wavelength(A)   flux(erg/cm^2/s/A at 10pc) .
 \end{verbatim}
 The wavelength binning must be uniform, but the epoch binning
 can be non-uniform.
