--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -13246,7 +13246,24 @@ Additional reformat options can be specified using {\tt SNLCINP} input mask
     OPT_REFORMAT_FITS = 128 ! include spectra
     OPT_REFORMAT_FITS = 256 ! exclude SIM truth to look like real data
 \end{verbatim}
-% 
+%
+Here is an example command to convert a simulation into a data-like
+sample that has no truth information:
+\begin{verbatim}    
+snana.exe NOFILE \
+  VERSION_PHOTOMETRY     CHALLENGE_SNIa  \
+  VERSION_REFORMAT_FITS  CHALLENGE_SNIa_TRAIN \
+  OPT_REFORMAT_FITS      256 \
+  CUTWIN_SNTYPE 1 99
+\end{verbatim}     
+%
+The last input {\tt CUTWIN\_SNTYPE} selects all 
+spectroscopically-confirmed tags, and other {\tt CUTWIN} 
+options can be used as well. The output data folder
+{\tt CHALLENGE\_SNIa\_TRAIN} contains no sim-truth which
+is useful for i) data challenges, and ii) test analysis codes
+to ensure they don't cheat using sim-truth.
+
 % --------------------------------------
   \clearpage
   \subsubsection{Re-write Data Files with Flux Fudges}
