implement RANSYSTPAR_SIGSHIFT_zPHOT_HOST

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -6774,6 +6774,7 @@ Here are examples of available options for the sim-input file:
    RANSYSTPAR_SIGSCALE_MWEBV:    0.05     # scale MWEBV 
    RANSYSTPAR_SIGSHIFT_MWRV:     0.2      # shift RV
    RANSYSTPAR_SIGSHIFT_REDSHIFT: 1E-4     # shift measured redshift
+   RANSYSTPAR_SIGSHIFT_zPHOT_HOST: 0.01   # shift zPHOT of host galaxy
    RANSYSTPAR_SIGSHIFT_W0:           0.1  # shift w
    RANSYSTPAR_SIGSHIFT_OMEGA_MATTER: 0.1  # shift OM
 
